Added a WindowFactory to enable to pipe the window events to an object (in this case Engine.cpp).
A first folder structure has been added to the project.

Now the StartUp class only has the main WinAPI enttrance function. It creates the engine and starts it. The engine is running in an infitnite loop (Engine.run()), waiting to window events. When the closing event appears, the program is completly destroyed.

--- a/Project-Forgotten/Project-Forgotten.vcxproj
+++ b/Project-Forgotten/Project-Forgotten.vcxproj
@@ -76,7 +76,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Engine\Engine.cpp" />
     <ClCompile Include="StartUp.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Engine\Engine.h" />
+    <ClInclude Include="StartUp.h" />
+    <ClInclude Include="WindowManagement\WindowFactory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
